Use non-deprecated method to get locale